k8s/db/mongodb-sharded-cluster/mongo-express-sharded-cluster-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-sharded-cluster-deployment
  labels:
    app: mongo-express-sharded-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express-sharded-cluster
  template:
    metadata:
      labels:
        app: mongo-express-sharded-cluster
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
          - containerPort: 8081
