k8s/db/mongodb-sharded-cluster/mongo-express-sharded-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-sharded-cluster-service
spec:
  selector:
    app: mongo-express-sharded-cluster
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
