k8s/db/mongodb-sharded-cluster/mongodb-sharded-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-sharded-cluster-service
spec:
  selector:
    app: mongodb-sharded-cluster
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
